# ops-deck-oss

./: .content-guard.yml  .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml
.githooks/: commit-msg  pre-commit  project-blocks.txt
.github/workflows/: ci.yml  content-guard.yml
agent-intel/: Dockerfile  README.md  pyproject.toml  requirements.txt  server.py
agent-intel/tests/: conftest.py  test_codebase.py  test_journal.py  test_memory_cards.py  test_repo_detail.py  test_repos.py
api/: Dockerfile  package-lock.json  package.json
api/data/: agent-intel.json  architecture.json  backlog.json  cron-jobs.json  security-audit.json
api/data/journal/: 2026-03-18.md  2026-03-19.md  2026-03-20.md
api/data/workspace/: AGENTS.md  IDENTITY.md  MEMORY.md  SOUL.md  TOOLS.md  USER.md
api/src/: server.js
code-search/: Dockerfile  requirements.txt
code-search/app/: main.py
code-search/data/corpus/: architecture-notes.md  prompt-patterns.txt  runbook-cron-tuning.md
docs/: pm2-setup.md
prompt-library/: Dockerfile  package-lock.json  package.json
prompt-library/data/: prompts.seed.json
prompt-library/src/: server.js
sample-workspace/memory/: 2026-04-28.md
sample-workspace/memory/cards/: sample.md
scripts/: README.md  install-hooks.sh  pr-create.sh
ui/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/public/: backup-status.json  manifest.json  sw.js
ui/src/: App.tsx  index.css  main.tsx  projects.ts  router.tsx
ui/src/components/: LobsterIcon.tsx  MarkdownContent.tsx  Sidebar.tsx  (+6 more)
(+44 files in other folders)
