[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "opsdeck-agent-intel"
version = "0.1.0"
description = "Public sidecar for the opsdeck dashboard. Reads OpenClaw workspace files. Read-only."
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.pytest.ini_options]
testpaths = ["tests"]
